2016-07-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Initial version 0.0.1
